feat: add 3D Language Embedding Space visualization
- Add Three.js-based 3D visualization of 85 world languages
- Languages positioned like word embeddings, clustered by family
- 18 language families with distinct colors (Romance, Germanic, Slavic, etc.)
- Sphere size based on speaker count (log scale)
- Interactive: hover, click, family filter, nearest neighbors
- Auto-rotate with OrbitControls, labels face camera
- Remove redundant country-detail feature (cartogram covers this)
- Update routes: /countries → /languages

--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "test:coverage": "vitest run --coverage"
   },
   "dependencies": {
+    "three": "^0.181.2",
     "vue": "^3.5.24",
     "vue-router": "^4.6.3"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^6.0.1",
+    "@vitest/coverage-v8": "^3.2.4",
     "@vue/test-utils": "^2.4.6",
     "autoprefixer": "^10.4.22",
     "daisyui": "^4.12.24",
@@ -24,7 +26,6 @@
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.18",
     "vite": "^7.2.4",
-    "vitest": "^3.2.4",
-    "@vitest/coverage-v8": "^3.2.4"
+    "vitest": "^3.2.4"
   }
 }
